# zephyr_gartennode_zysternenmodul

./: .gitmodules  CMakeLists.txt  prj.conf
.devcontainer/: commands.txt  devcontainer.json
.github/workflows/: build.yaml  build2.yaml  workspace.yaml
boards/: gartennode.overlay  nucleo_f767zi.overlay
objdict/: CO_OD.c  CO_OD.h  objdict.eds  objdict.xml
src/: main.c
